--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.css
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.css
@@ -83,3 +83,39 @@
     border-color: rgb(89, 167, 89);
     color: rgb(89, 167, 89);
 }
+.tabl_3_0 {
+    border-collapse: collapse;
+    margin: auto;
+}
+.tabl_3_0 td {
+    border: black solid 1px;
+    height: 35px;
+}
+.tabl_3_1 {
+    border-collapse: collapse;
+    margin: auto;
+    font-family: sans-serif;
+    font-size: large;
+}
+.tabl_3_1 td {
+    border: black solid 1px;
+    height: 35px;
+}
+.tabl_3_1 th {
+    border: black solid 1px;
+    height: 35px;
+}
+.tabl_3_2 td {
+    border: solid black 1px;
+    height: 35px;
+}
+.tabl_3_2 th {
+    border: solid black 1px;
+    height: 35px; 
+}
+.tabl_3_2 {
+    border-collapse: collapse;
+    margin: auto;
+    font-family: sans-serif;
+    font-size: large;
+}
