--- a/src/d.grinevich/homework_3/homework_3.css
+++ b/src/d.grinevich/homework_3/homework_3.css
@@ -123,4 +123,190 @@ margin-top: -1px;
     margin-left: -24px;
     white-space: pre;
 }
+.border-radius{
+    border-top-left-radius: 10% 30%;
+    border-bottom-right-radius: 10% 30%; 
+    border: solid 9px blueviolet; 
+    width: 180px;
+    height: 60px;
+    margin-top: -75px;
+}
+.done{
+    padding-block: 10px;
+}
+.settings{
+    margin-left: 215px;
+    padding-block: 8px;
+    padding-inline-start : 10px;
+}
+.cancel{
+    margin-left: -6px;
+    margin-right: -3px;
+}
+.textversiontwo{
+    font-weight: normal;
+    font-size: 15px;
+    text-align: center;
+    margin-top: -15px;
+}
+.letters{
+    font-size: 66px;
+    text-align: center;
+    margin-bottom: -37px;
+}
+.letterAblue{
+    border: solid 8px #00B2EE
+    ;
+    padding: 7px;
+    padding-left: 20px;
+    border-radius: 10px;
+    padding-right: 20px;
+    margin-right : -15px;
+    color : #00B2EE    ;
+}
+.letterAgreen{
+    border: solid 8px #00EE00;
+    padding: 7px;
+    padding-left: 20px;
+    border-radius: 10px;
+    padding-right: 20px;
+    margin-right : -15px;
+    color : #00EE00;
+}
+.letterAred{
+    border: solid 8px red;
+    padding: 7px;
+    padding-left: 20px;
+    border-radius: 10px;
+    padding-right: 20px;
+    margin-right : -15px;
+    color : red;
+}
+.texttables{
+    font-weight: normal;
+    font-size: 15px;
+    text-align: center;
+    margin-top: 90px;
+}
+.tables_rules{
+    height: 80px;
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+    padding: 5px;
+    border: solid 8px;
+    border-radius: 15px;
+
+}
+.col_width col{
+    width: 50px;
+}
+div table{
+    margin-left: 150px;
+}
+.blue{
+    color : #00B2EE;
+    border: solid 8px #00B2EE;
+}
+.red{
+    border: solid 8px red;
+    color : red;
+}
+.green{
+    color : #00EE00;
+    border: solid 8px #00EE00;
+}
+.margin_top{
+    margin-top: 45px;
+    margin-left: 140px;
+}
+.width_table_rule col{
+    width: 500px;
+    
+}
+.table_border{
+    border:solid 1px black;
+    border-collapse: collapse;
+    height: 30px;
+}
+.table-width{
+    width: 793px;
+    margin-left: -155px;
+}
+.margin_left{
+    margin-left: 150px;
+}
+.margin_rule{
+    margin-top: 60px;
+    margin-left: 23px;
+}
+
+
+    
+
+.width_table{
+    border-collapse: collapse;
+    border: black 1px solid;
+    height: 30px;
+    
+}
+.table-widthtwo{
+    border-collapse: collapse;
+    width: 649px;
+    margin-left: -7px;
+}
+.table_parammm{
+    border: solid 1px black;
+    height: 30px;
+    border-collapse: collapse;
+    padding-right: 25px;
+}
+.table-widthtwo{
+    border-collapse: collapse;
+    width: 649px;
+    margin-left: -7px;
+}
+.height{
+    height: 350px;
+}
+.height_last_table{
+    height: 450px;
+    text-align: center;
+    font-weight: normal;
+    font-size: 14px;
+}
+.color_lilac{
+    background-color: #6495ED
+}
+.color_green{
+    background-color: #8FBC8F
+}
+.color_grey{
+    background-color: grey;
+}
+.color_black{
+    background-color: black;
+}
+.color_blue{
+    background-color: #4169E1;
+}
+.color_red{
+        background-color: red;
+    
+}
+.color_light_green
+{
+    background-color: #04A057;
+}
+.table_parammmone{
+    height: 35px;
+    border-collapse: collapse;
+    padding-right: 25px;
+
+
+
+
+
+
+    
 
