--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.css
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.css
@@ -165,3 +165,14 @@ td.color_green {
     border-collapse: collapse;
     margin: auto;
 }
+.tabl_3_6 td {
+    border: solid black 1px;
+    height: 45px;
+    font-family: sans-serif;
+    font-size: small;
+    text-align: center;
+}
+.tabl_3_6 {
+    border-collapse: collapse;
+    margin: auto;
+}
