--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.css
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.css
@@ -171,6 +171,7 @@ td.color_green {
     font-family: sans-serif;
     font-size: small;
     text-align: center;
+    vertical-align: bottom;
 }
 .tabl_3_6 {
     border-collapse: collapse;
