--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.css
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.css
@@ -51,16 +51,20 @@
 } 
 .ramka_5 {
     border: solid rgb(171, 24, 207) 7px;
-    width: 188px;
-    height: 62px;
+    width: 211px;
+    height: 68px;
     margin: auto;
     border-radius: 25px 0px 25px 0px;
     text-align: center;
     white-space: nowrap;
-    word-spacing: -4px;   
+    
+       
 }
 .material-icons {
     font-family: Material Icons;
+    line-height: 68px;
+    font-size: 40px;
+    word-spacing: -4px;
 }
 .common {
     border: solid black 7px;
@@ -83,6 +87,36 @@
     border-color: rgb(89, 167, 89);
     color: rgb(89, 167, 89);
 }
+
+.cub_A, .cub_B, .cub_C, .cub_D, .cub_E, .cub_F{
+    border: black solid 7px;
+    border-radius: 15px;
+    text-align: center;
+    font-weight: bold;
+    width: 80px;
+    height: 80px;
+    font-family: sans-serif;
+    font-size: 70px; 
+    display: inline-block;
+}
+.A {
+     margin-left:  391px; 
+     width: 80px;
+     margin-top: 30px;
+     margin-bottom: 2px;
+    
+     
+}
+.BC {
+    margin-left: 342px;
+     width: 240px;
+     margin-bottom: 2px;
+}
+.DEF {
+     margin-left: 292px;
+     width: 320px;
+}
+
 .tabl_3_0 {
     border-collapse: collapse;
     margin: auto;
