--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.css
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.css
@@ -246,8 +246,27 @@ td.blue2 {
 td.red2 {
     background-color: red;
 }
-
-
+.top_right_corner {
+    background-image: url(./top-right_corner.png);
+    background-repeat: no-repeat;
+    background-position: top;
+    height: 100px;
+    width: 100px;
+}
+.left_line {
+    background-image: url(./line.png);
+    background-repeat: repeat-y;
+    background-position: center;
+    height: 100px;
+    width: 20px;
+}
+.bottom_right_corner {
+    background-image: url(./bottom-right_corner.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    height: 100px;
+    width: 100px;
+}
 
 
 
