--- a/src/d.astreyko/l.gutorova/homework_3/homework_3.css
+++ b/src/d.astreyko/l.gutorova/homework_3/homework_3.css
@@ -249,23 +249,24 @@ td.red2 {
 .top_right_corner {
     background-image: url(./top-right_corner.png);
     background-repeat: no-repeat;
-    background-position: top;
-    height: 100px;
-    width: 100px;
+    background-size: 50px 50px;
+
+    background-position-x: 100px;
+
+    
 }
 .left_line {
     background-image: url(./line.png);
+    background-size: 20px 20px;
     background-repeat: repeat-y;
-    background-position: center;
-    height: 100px;
-    width: 20px;
+    
+    background-position-x: 100px;
 }
 .bottom_right_corner {
     background-image: url(./bottom-right_corner.png);
     background-repeat: no-repeat;
-    background-position: bottom;
-    height: 100px;
-    width: 100px;
+    background-size: 20px 20px;
+    background-position-x: 100px;
 }
 
 
