--- a/src/l.gutorova/Homework_4/Task_3/task_3.css
+++ b/src/l.gutorova/Homework_4/Task_3/task_3.css
@@ -9,12 +9,13 @@ tr:nth-child(2n+2) {
     color: white;
 }
 
-a[href^='http://']:link {
+a:link {
     color: orange;
 }
-a[href^='http://']:visited {
+a:visited {
     color: green;
 }
+
 a[href^='http://']:hover {
     text-decoration: none;
 }
