--- a/src/l.gutorova/Homework_4/Task_3/task_3.css
+++ b/src/l.gutorova/Homework_4/Task_3/task_3.css
@@ -9,13 +9,13 @@ tr:nth-child(2n+2) {
     color: white;
 }
 
-a:link {
+a {
     color: orange;
 }
 a:visited {
     color: green;
 }
-
-a[href^='http://']:hover {
+a:hover {
     text-decoration: none;
 }
+
