--- a/src/a.yantsevich/homeworks/homework_4/task_10/hw_4_10.css
+++ b/src/a.yantsevich/homeworks/homework_4/task_10/hw_4_10.css
@@ -15,6 +15,10 @@ p:hover {
     background-color: green;
 }
 
-p:hover~p {
+p:nth-child(odd):hover~p:nth-child(odd) {
+    background-color: red;
+}
+
+p:nth-child(even):hover~p:nth-child(even) {
     background-color: red;
 }
