--- a/src/a.yantsevich/homeworks/homework_4/task_1/hw_4_1.css
+++ b/src/a.yantsevich/homeworks/homework_4/task_1/hw_4_1.css
@@ -1,7 +1,3 @@
-body {
-    text-align: center;
-}
-
 .h1_blue {
     color: blue;
 }
@@ -14,4 +10,16 @@ body {
 
 .big-font {
     font-size: 200%;
+}
+
+body {
+    background-color: #fff;
+    color: #333;
+    font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
+    padding: 1em;
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
 }
