--- a/src/a.yantsevich/homeworks/homework_4/task_2/hw_4_2.css
+++ b/src/a.yantsevich/homeworks/homework_4/task_2/hw_4_2.css
@@ -19,3 +19,15 @@ body>* {
 .alert.go {
     background-color: seagreen;
 }
+
+body {
+    background-color: #fff;
+    color: #333;
+    font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
+    padding: 1em;
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
