--- a/src/a.yantsevich/homeworks/homework_4/task_4/hw_4_4.css
+++ b/src/a.yantsevich/homeworks/homework_4/task_4/hw_4_4.css
@@ -1,22 +1,24 @@
 body {
-    text-align: center;
+    background-color: #fff;
+    color: #333;
+    font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
+    padding: 1em;
+    margin: 0;
 }
 
-.h1_blue {
-    color: blue;
+* {
+    box-sizing: border-box;
 }
 
-.h2_white {
-    background-color: blue;
-    color: white;
-    display: inline-block;
+h2 {
+    margin: 0;
 }
 
-.big-font {
-    font-size: 200%;
-    text-align: left;
+h2+p {
+    color: red;
 }
 
-.special {
-    background-color: yellow;
+ul.list>li {
+    list-style: none;
+    border-bottom: 1px black solid;
 }
