--- a/src/a.yantsevich/homeworks/homework_4/task_7/hw_4_7.css
+++ b/src/a.yantsevich/homeworks/homework_4/task_7/hw_4_7.css
@@ -1,22 +1,20 @@
 body {
-    text-align: center;
+    counter-reset: number;
 }
 
-.h1_blue {
-    color: blue;
+p {
+    font-size: 20px;
 }
 
-.h2_white {
-    background-color: blue;
-    color: white;
-    display: inline-block;
+p::after {
+    counter-increment: number;
+    content: '#' counter(number);
 }
 
-.big-font {
-    font-size: 200%;
-    text-align: left;
+p:hover {
+    background-color: green;
 }
 
-.special {
-    background-color: yellow;
+p:hover+p {
+    background-color: red;
 }
