--- a/src/l.gutorova/homework_5/Task_1/Task_1.css
+++ b/src/l.gutorova/homework_5/Task_1/Task_1.css
@@ -7,7 +7,7 @@
     margin-top: 30px;
     position: relative;
 }
-div.relative .cub_red_1-1 {
+.relative .cub_red_1-1 {
     border: 1px red solid;
     position: relative;
     left: 20px;
@@ -18,7 +18,7 @@ div.relative .cub_red_1-1 {
 
     
 }
-div.relative .cub_blue_1-1 {
+.relative .cub_blue_1-1 {
     border: 1px blue solid;
     position: relative;
     left: 70px;
@@ -28,7 +28,7 @@ div.relative .cub_blue_1-1 {
     box-sizing: border-box;
     
 }
-div.relative .cub_green_1-1 {
+.relative .cub_green_1-1 {
     border: 1px green solid;
     position: relative;
     left: 120px;
@@ -38,7 +38,7 @@ div.relative .cub_green_1-1 {
     box-sizing: border-box;
     
 }
-div.absolute .cub_red_1-1 {
+.absolute .cub_red_1-1 {
     border: 1px red solid;
     position: absolute;
     left: 20px;
@@ -48,7 +48,7 @@ div.absolute .cub_red_1-1 {
     box-sizing: border-box;
 }
 
-div.absolute .cub_blue_1-1 {
+.absolute .cub_blue_1-1 {
     border: 1px blue solid;
     position: absolute;
     left: 70px;
@@ -57,7 +57,7 @@ div.absolute .cub_blue_1-1 {
     height: 30px;
     box-sizing: border-box;
 }
-div.absolute .cub_green_1-1 {
+.absolute .cub_green_1-1 {
     border: 1px green solid;
     position: absolute;
     left: 120px;
@@ -76,7 +76,7 @@ div.absolute .cub_green_1-1 {
     position: relative;
     
 }
-div.relative .cub_red_1-2 {
+.relative .cub_red_1-2 {
     border: 1px red solid;
     position: relative;
     left: 20px;
@@ -87,7 +87,7 @@ div.relative .cub_red_1-2 {
 
     
 }
-div.relative .cub_blue_1-2 {
+.relative .cub_blue_1-2 {
     border: 1px blue solid;
     position: relative;
     left: 70px;
@@ -97,7 +97,7 @@ div.relative .cub_blue_1-2 {
     box-sizing: border-box;
     
 }
-div.relative .cub_green_1-2 {
+.relative .cub_green_1-2 {
     border: 1px green solid;
     position: relative;
     left: 120px;
@@ -107,7 +107,7 @@ div.relative .cub_green_1-2 {
     box-sizing: border-box;
     
 }
-div.absolute .cub_red_1-2 {
+.absolute .cub_red_1-2 {
     border: 1px red solid;
     position: absolute;
     left: 20px;
@@ -118,7 +118,7 @@ div.absolute .cub_red_1-2 {
 
     
 }
-div.absolute .cub_blue_1-2 {
+.absolute .cub_blue_1-2 {
     border: 1px blue solid;
     position: absolute;
     left: 70px;
@@ -128,7 +128,7 @@ div.absolute .cub_blue_1-2 {
     box-sizing: border-box;
     
 }
-div.absolute .cub_green_1-2 {
+.absolute .cub_green_1-2 {
     border: 1px green solid;
     position: absolute;
     left: 120px;
@@ -147,7 +147,7 @@ div.absolute .cub_green_1-2 {
     margin-top: 30px;
     position: relative;
 }
-div.relative .cub_red_1-3 {
+.relative .cub_red_1-3 {
     border: 1px red solid;
     position: relative;
     left: 20px;
@@ -158,7 +158,7 @@ div.relative .cub_red_1-3 {
 
     
 }
-div.relative .cub_blue_1-3 {
+.relative .cub_blue_1-3 {
     border: 1px blue solid;
     position: relative;
     left: 50px;
@@ -168,7 +168,7 @@ div.relative .cub_blue_1-3 {
     box-sizing: border-box;
     
 }
-div.relative .cub_green_1-3 {
+.relative .cub_green_1-3 {
     border: 1px green solid;
     position: relative;
     left: 80px;
@@ -179,28 +179,25 @@ div.relative .cub_green_1-3 {
     
    
 
-    div.absolute .cub_red_1-3 {
+.absolute .cub_red_1-3 {
         border: 1px red solid;
         position: absolute;
         left: 20px;
         top: 20px;
         width: 50px;
         height: 50px;
-        box-sizing: border-box;
-    
-        
-    }
-    div.absolute .cub_blue_1-3 {
+        box-sizing: border-box;     
+}
+.absolute .cub_blue_1-3 {
         border: 1px blue solid;
         position: absolute;
         left: 50px;
         top: 50px;
         width: 50px;
         height: 50px;
-        box-sizing: border-box;
-        
+        box-sizing: border-box;    
     }
-    div.absolute .cub_green_1-3 {
+.absolute .cub_green_1-3 {
         border: 1px green solid;
         position: absolute;
         left: 80px;
