--- a/src/l.gutorova/homework_5/Task_3/Task_3.css
+++ b/src/l.gutorova/homework_5/Task_3/Task_3.css
@@ -13,10 +13,20 @@ box-sizing: border-box;
     width: 400px;   
     box-sizing: border-box;
     margin: 25px 75px;
+    position: relative;
 }
 .small_cub-1 {
     border: red 1px solid;
     position: relative;
+    width: 80px;
+    height: 80px;
+    left: 70px;
+    top: 70px;
+    box-sizing: border-box;
+}
+.small_cub-absolute {
+    border: red 1px solid;
+    position: absolute;
     width: 80px;
     height: 80px;
     left: 70px;
@@ -30,6 +40,7 @@ box-sizing: border-box;
     width: 400px;   
     box-sizing: border-box;
     margin: 25px 75px;
+    position: relative;
 }
 .small_cub-2 {
     background-color: white;
@@ -51,6 +62,26 @@ box-sizing: border-box;
     box-sizing: border-box;
     z-index: 1;
 }
+.small_cub-2-absolute {
+    background-color: white;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 40px;
+    top: 40px;
+    box-sizing: border-box;
+    z-index: 1;
+}
+.small_cub-3-absolute {
+    background-color: white;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 280px;
+    top: 180px;
+    box-sizing: border-box;
+    z-index: 1;
+}
 .traffic_lights {
         border: black 1px solid;
         position: relative;
@@ -58,7 +89,8 @@ box-sizing: border-box;
         width: 150px;   
         box-sizing: border-box;
         left: 200px;
-        top: 25px;            
+        top: 25px;  
+        position: relative;          
 }
 .circle {
  border: 1px black solid;
@@ -81,6 +113,27 @@ box-sizing: border-box;
     background-color: green;
    top: 60px;
 }
+.circle-absolute {
+    border: 1px black solid;
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    left: 40px;
+    box-sizing: border-box;
+   }
+   .red-absolute {
+       background-color: red;
+       top: 30px;
+   }
+   .yellow-absolute {
+       background-color: yellow;
+       top: 115px
+   }
+   .green-absolute {
+       background-color: green;
+      top: 200px;
+   }
 .circle-head {
     border:  1px solid rgb(163, 223, 210);
     position: relative;
@@ -125,3 +178,38 @@ position: relative;
 left: 100px;
 top: 80px;
 }
+.eyes-absolute {
+    border: 1px solid white;
+    border-radius: 50%;
+    position:absolute;
+    background-color: white;
+    width: 55px;
+    height: 55px;
+    box-sizing: border-box;
+    }
+    
+    .left-absolute {
+        left: 70px;
+        top: 55px
+    }
+    .right-absolute {
+        left: 195px;
+        top: 55px;
+    }
+    .nose-absolute {
+    background-color: white;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 140px;
+    top: 125px;
+    }
+    .mouth-absolute {
+    background-color: white;
+    width: 120px;
+    height: 15px;
+    position: absolute;
+    left: 100px;
+    top: 225px;
+    }
+    
