--- a/src/l.gutorova/homework_5/Task_3/Task_3.css
+++ b/src/l.gutorova/homework_5/Task_3/Task_3.css
@@ -8,12 +8,12 @@ transform: translateX(-50%);
 box-sizing: border-box;
 }
 .inside_cub-1 {
-    border: green 1px solid;
+    border: seagreen 1px solid;
     height: 300px;
     width: 400px;   
     box-sizing: border-box;
     margin: 25px 75px;
-    position: relative;
+   
 }
 .small_cub-1 {
     border: red 1px solid;
@@ -24,24 +24,10 @@ box-sizing: border-box;
     top: 70px;
     box-sizing: border-box;
 }
-.small_cub-absolute {
-    border: red 1px solid;
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    left: 70px;
-    top: 70px;
-    box-sizing: border-box;
+.background {
+    background-color: seagreen;
 }
-.inside_cub-2 {
-   background-color: seagreen;
-    position: relative;
-    height: 300px;
-    width: 400px;   
-    box-sizing: border-box;
-    margin: 25px 75px;
-    position: relative;
-}
+
 .small_cub-2 {
     background-color: white;
     position: relative;
@@ -62,26 +48,8 @@ box-sizing: border-box;
     box-sizing: border-box;
     z-index: 1;
 }
-.small_cub-2-absolute {
-    background-color: white;
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    left: 40px;
-    top: 40px;
-    box-sizing: border-box;
-    z-index: 1;
-}
-.small_cub-3-absolute {
-    background-color: white;
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    left: 280px;
-    top: 180px;
-    box-sizing: border-box;
-    z-index: 1;
-}
+
+
 .traffic_lights {
         border: black 1px solid;
         position: relative;
@@ -92,28 +60,8 @@ box-sizing: border-box;
         top: 25px;  
         position: relative;          
 }
-.circle {
- border: 1px black solid;
- position: relative;
- width: 70px;
- height: 70px;
- border-radius: 50%;
- left: 40px;
- box-sizing: border-box;
-}
-.red {
-    background-color: red;
-    top: 30px;
-}
-.yellow {
-    background-color: yellow;
-    top: 45px
-}
-.green {
-    background-color: green;
-   top: 60px;
-}
-.circle-absolute {
+
+.circle{
     border: 1px black solid;
     position: absolute;
     width: 70px;
@@ -122,15 +70,15 @@ box-sizing: border-box;
     left: 40px;
     box-sizing: border-box;
    }
-   .red-absolute {
+   .red {
        background-color: red;
        top: 30px;
    }
-   .yellow-absolute {
+   .yellow {
        background-color: yellow;
        top: 115px
    }
-   .green-absolute {
+   .green {
        background-color: green;
       top: 200px;
    }
@@ -145,40 +93,8 @@ box-sizing: border-box;
     height: 320px;
     box-sizing: border-box;
 }
-.eyes {
-border: 1px solid white;
-border-radius: 50%;
-position: relative;
-background-color: white;
-width: 55px;
-height: 55px;
-box-sizing: border-box;
-}
 
-.left {
-    left: 70px;
-    top: 55px
-}
-.right {
-    left: 195px;
-}
-.nose {
-background-color: white;
-width: 40px;
-height: 40px;
-position: relative;
-left: 140px;
-top: 25px;
-}
-.mouth {
-background-color: white;
-width: 120px;
-height: 15px;
-position: relative;
-left: 100px;
-top: 80px;
-}
-.eyes-absolute {
+.eyes {
     border: 1px solid white;
     border-radius: 50%;
     position:absolute;
@@ -188,15 +104,15 @@ top: 80px;
     box-sizing: border-box;
     }
     
-    .left-absolute {
+    .left {
         left: 70px;
         top: 55px
     }
-    .right-absolute {
+    .right {
         left: 195px;
         top: 55px;
     }
-    .nose-absolute {
+    .nose {
     background-color: white;
     width: 40px;
     height: 40px;
@@ -204,7 +120,7 @@ top: 80px;
     left: 140px;
     top: 125px;
     }
-    .mouth-absolute {
+    .mouth{
     background-color: white;
     width: 120px;
     height: 15px;
