--- a/src/l.gutorova/homework_5/Task_6/Task_6.css
+++ b/src/l.gutorova/homework_5/Task_6/Task_6.css
@@ -1,37 +1,74 @@
+.common {
+    display: flex;
+    flex-direction: row;
+}
 .tabl_1 {
     display: flex;
     flex-direction: column;
-    width: 30vw;
+    width: 25vw;
     margin: auto;
+    font-size: x-small;
 }
-.header {
+.header-1 {
     border: black 1px solid;
     height: 48px;
 }
-.footer {
+.footer-1 {
     border: black 1px solid;
     height: 48px;
 }
-.box {
-    border: black 1px solid;
+.box-1 {
+    border-left: black 1px solid;
+    border-right: black 1px solid;
     height: 200px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     flex-direction: row;
 
 }
-.left {
+.left-1 {
     border: black 1px solid;
+    border-left: none;
     height: 180px;
-    width: 8vw;
+    width: 6vw;
 }
-.content {
+.content-1 {
     border: black 1px solid;
     height: 180px;
-    width: 8vw;
+    width: 12vw;
 }
-.right {
+.right-1 {
     border: black 1px solid;
+    border-right: none;
     height: 180px;
-    width: 8vw;
+    width: 6vw;
+}
+.left-2 {
+    height: 200px;
+    width: 6vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.cub-2 {
+    border: black 1px solid;
+    width: 40px;
+    height: 40px;
+    
+}
+
+.content-2 {
+    border: black 1px solid;
+    margin-top: -30px;
+    height: 150px;
+    width: 12vw;
+}
+.right-2 {
+    border: black 1px solid;
+    border-right: none;
+    margin-top: -30px;
+    height: 150px;
+    width: 6vw;
 }
