--- a/src/l.gutorova/homework_5/Task_7/Task_7.css
+++ b/src/l.gutorova/homework_5/Task_7/Task_7.css
@@ -66,7 +66,7 @@
     color: rgb(66 65 65 / 81%);
     font-weight: 600;
     text-align: right;
-    margin-left: 20px;
+    margin-right: -20px;
  
 }     
 .material-icons {
@@ -84,7 +84,7 @@ opacity: 0.5;
     align-items: center;
     font-size: 14px;
     opacity: 0.5;
-    margin-left: 20px;
+    margin-right: -20px;
     
 }
 .B_ZH_U {
@@ -114,11 +114,12 @@ opacity: 0.5;
     text-align: right;
     color: rgb(66 65 65 / 90%);
     font-weight: 600;
-    margin-bottom: 4px;
+    margin-bottom: 5px;
+    text-align: right;
 }
 .B_ZH_U-number-2 {
     font-weight: bold;
     font-size: large;
     line-height: 15px;
-
+    text-align: right;
 }
