--- a/src/l.gutorova/homework_5/Task_7/Task_7.css
+++ b/src/l.gutorova/homework_5/Task_7/Task_7.css
@@ -60,13 +60,12 @@
     height: 35px;
     font-family: sans-serif;
     align-items: center;
-    word-spacing: 24px;
-    font-size: 15px;
-    font-size: 15px;
+    word-spacing: 32px;
+    font-size: 14px;
     color: rgb(66 65 65 / 81%);
     font-weight: 600;
     text-align: right;
-    margin-right: -20px;
+    padding: 0px 4px 0px 26px;
  
 }     
 .material-icons {
@@ -82,7 +81,7 @@ opacity: 0.5;
     background-color: rgb(195 195 195 / 20%);
     font-family: sans-serif;
     align-items: center;
-    font-size: 14px;
+    font-size: 13px;
     opacity: 0.5;
     margin-right: -20px;
     
@@ -94,17 +93,18 @@ opacity: 0.5;
     justify-content: space-around;
     align-items: center;
     height: 60px;
-    margin-left: 20px;
+    margin-right: 12px;
+    padding: 0px 0px 0px 20px;
 }
 .B_ZH_U-number {
-    font-size: 15px;
+    font-size: 14px;
     color: rgb(66 65 65 / 81%);
     font-weight: 600;
     text-align: right;
     
 }
 .B_ZH_U_text {
-    font-size: 14px;
+    font-size: 13px;
     opacity: 0.5;
     text-align: right;
     margin-bottom: 4px;
