--- a/src/l.gutorova/homework_6/Task_1/Task_1.css
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.css
@@ -39,7 +39,6 @@
    text-align: center;
    margin-top: 10px;
 }
-.radio-top input{
-    color: green;
-
+.material icons {
+    font-family: Material Icons;
 }
