--- a/src/l.gutorova/homework_6/Task_1/Task_1.css
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.css
@@ -27,7 +27,7 @@
     margin-top: 12px;
     font-size: x-large;
 }
-.borger_radio-top {
+.borger_checkbox {
     border: 2px solid  rgb(207 207 207 / 78%);
     border-left: none;
     border-right: none;
@@ -37,54 +37,118 @@
     left: 50%;
     transform: translateX(-50%);
     margin-top: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    
 }
-.radio-top {
-   font-family: sans-serif;
-   font-size: small;
-   text-align: center;
-   margin-top: 14px;
+.checkbox .checked, .checkbox .unchecked {
+    display: none;
+}
+.checkbox input:checked ~ .checked {
+    display: inline;
+}
+.checkbox input:not(:checked) ~ .unchecked {
+    display: inline;
+}
+.text-top {
+    font-family: sans-serif;
+    font-size: small;
+    color: rgb(116 115 115 / 80%);
+    padding-right: 8px;
+}
+.checkbox span {
+    color: #2933a5bf;
+    font-size: 18px;
+    padding-right: 8px;
 }
 
-.checkbox-check {
-    position: absolute;
-    z-index: -1;
-    opacity: 0; 
-}
-.checkbox-check+label {
-    display: inline-flex;
-    align-items: center;
-}
-.checkbox-check:not(:checked)+label::before {
-    content: '';
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    border: 1px solid #316da8;
-    background-color:#316da8 ;
-    border-radius: 0.5em;
-    margin-right: 0.5em;
-}
-.checkbox-check:checked+label span {
- visibility: visible;
-}
 .center {
     position: relative;
-    top: 12px;
+    top: 20px;
     width: 200px;
+    height: 100px;
     left: 50%;
     transform: translateX(-50%);
 }
-.center input {
+.conteiner_center {
+    display: flex;
+    flex-direction: row;
+}
+.icon {
+    background-color: #2933a5bf ;
+    width: 30px;
+    height: 26px;
+    margin-left: 15px;
+    display: flex;
+    justify-content: center;
+    border-radius: 3px 0px 0px 3px;
+    box-shadow:-1px 0px 4px 1px rgba(0,0,0,0.35);
+-webkit-box-shadow:-1px 0px 4px 1px rgba(0,0,0,0.35);
+-moz-box-shadow:-1px 0px 4px 1px rgba(0,0,0,0.35);
+}
+.icon span {
+    font-size: 18px;
+    color: white;
+    line-height: 22px;
+}
+.conteiner_center input {
     height: 28px;
-    border: solid 2px rgb(207 207 207 / 78%);
+    border: solid 1px rgb(207 207 207 / 78%);
     color: rgb(207 207 207 / 78%);
     padding: 12px;
     border-radius: 3px;
     width: 140px;
-    font-size: 14px;
+    font-size: small;
+    margin-bottom: 8px;
+    box-shadow:1px 0px 4px 1px rgba(0,0,0,0.2);
+-webkit-box-shadow:1px 0px 4px 1px rgba(0,0,0,0.2);
+-moz-box-shadow:1px 0px 4px 1px rgba(0,0,0,0.2);
 }
-.center-form {
-    margin-top: 10px;
+.bottom_checkbox {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-
-
+.bottom {
+    width: 200px;
+    display: flex;
+    flex-direction: row;
+    font-family: sans-serif;
+    margin-left: 16px;
+}
+.bottom_button {
+    width: 100px;
+    margin-top: 24px;
+    margin-left: 12px;
+    font-size: xx-small;
+}
+.bottom_button button {
+    background-color: #2933a5bf;
+    width: 58px;
+    height: 25px;
+    border-radius: 3px;
+    color: white;
+    border: none;
+    font-size: 10px;
+    box-shadow:0px 0px 4px 3px rgba(0,0,0,0.1);
+    -webkit-box-shadow:0px 0px 4px 3px rgba(0,0,0,0.1);
+    -moz-box-shadow:0px 0px 4px 3px rgba(0,0,0,0.1);
+}
+.bottom_text {
+    width: 108px;
+    margin-top: 16px;
+    font-size: xx-small;
+    color: rgb(116 115 115 / 80%);
+}
+a {
+    color: #2933a5bf;
+}
