--- a/src/l.gutorova/homework_6/Task_1/Task_1.css
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.css
@@ -97,7 +97,7 @@
 .conteiner_center input {
     height: 28px;
     border: solid 1px rgb(207 207 207 / 78%);
-    color: rgb(207 207 207 / 78%);
+    color: black;
     padding: 12px;
     border-radius: 3px;
     width: 140px;
@@ -106,6 +106,7 @@
     box-shadow:1px 0px 4px 1px rgba(0,0,0,0.2);
 -webkit-box-shadow:1px 0px 4px 1px rgba(0,0,0,0.2);
 -moz-box-shadow:1px 0px 4px 1px rgba(0,0,0,0.2);
+font-size: 11px;
 }
 .bottom_checkbox {
     position: relative;
