--- a/src/l.gutorova/homework_6/Task_2/Task_2.css
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.css
@@ -38,8 +38,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 32px;
+    margin-top: 28px;
 
+}
+.content.Company,  .content.Subject {
+    margin-top: 18px;
 }
 .content-form  {
     display: flex;
@@ -50,6 +53,9 @@
     font-size: xx-small;
     font-weight: bold;
     margin-right: 32px;
+}
+.content-text.text-5  {
+    margin-right: 26px;
 }
 .content-form input, select {
     background-color: #9b98982e;
@@ -67,15 +73,48 @@
 .form-2 input { 
     width: 278px; 
 }
-.form-3 input, select {
+.form-3 input {
     width: 278px;
     margin-left: 14px;
 }
+.form-3 select {
+    color: #757575;
+}
 .form-4-1 input {
-  width: 74px;
+  width: 76px;
   margin-left: 13px;
 }
 .form-4-2 input {
     width: 188px;
     margin-left: 14px;
+}
+.form-5 select {
+    width: 278px;
+    margin-left: 16px;
+}
+.small_text {
+    width:184px;
+    height: 10px;
+    margin-top: 4px;
+    margin-left: 110px;
+    font-size: 8px;
+    color: #9b9898;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.small_text.number  {
+    width:144px;
+}
+.borger_radio {
+    
+    border: 1px solid black;
+    width: 400px;
+    height: 50px;
+    margin-left: 20px;
+    margin-top: 28px;
+    font-size: small;
+}
+.material-icons {
+    font-family: Material Icons ;
 }
