--- a/src/l.gutorova/homework_6/Task_1/Task_1.css
+++ b/src/l.gutorova/homework_6/Task_1/Task_1.css
@@ -64,6 +64,11 @@
     font-size: 18px;
     padding-right: 8px;
 }
+.checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
 .center {
     position: relative;
