--- a/src/l.gutorova/homework_6/Task_2/Task_2.css
+++ b/src/l.gutorova/homework_6/Task_2/Task_2.css
@@ -116,3 +116,12 @@
 .material-icons {
     font-family: Material Icons ;
 }
+.radio input ~ .checked {
+    display: none;
+}
+.radio input:checked ~ .checked {
+    display: inline;
+}
+.radio input:checked ~ .unchecked {
+    display: none;
+}
